--- a/connect4desmos.html
+++ b/connect4desmos.html
@@ -94,7 +94,7 @@ function graphDecorations() {
 	calculator.setExpression({
 		id: "top",
 		latex:'(0, 6.5)',
-		label: "Use numbers 1-7 to play pieces (and r to reset)!",
+		label: "Use the number keys 1-7 to play pieces (and r to reset)!",
 		color: black,
 		hidden: true,
 		showLabel: true
